Bug 251446 - [GStreamer] Missing chain-ups to parent class constructed in custom GStreamer elements
Summary: [GStreamer] Missing chain-ups to parent class constructed in custom GStreamer...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-31 10:57 PST by Philippe Normand
Modified: 2023-02-01 02:27 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2023-01-31 10:57:26 PST
oops
Comment 1 Philippe Normand 2023-01-31 10:59:20 PST
Pull request: https://github.com/WebKit/WebKit/pull/9392
Comment 2 EWS 2023-02-01 02:26:17 PST
Committed 259672@main (ad178f924e78): <https://commits.webkit.org/259672@main>

Reviewed commits have been landed. Closing PR #9392 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-02-01 02:27:19 PST
<rdar://problem/104907657>